--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 
 # REQUIRED CHANGES
 # Edit next line, providing your own name.
-title: mohamedguenou | Professional Portfolio
+title: Mohamedguenou | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://mohamedguenou.github.io"
+url: "https://Mohamedguenou.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
